New analyzer class to simplify working with data
- change python code structure
- functions for counting string similarity
- easier access to paths
- requirements:
	- termcolor
	- pyyaml

--- a/kkvhash.ipynb
+++ b/kkvhash.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from kkvhash import kkv_hash"
+    "from python.kkvhash import kkv_hash"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "544728206"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,13 +28,6 @@
    "source": [
     "kkv_hash('test'.encode())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
