Resolve paths conflict.
- move notebooks to the `/ipynb` directory
- notebook: load data to analyze

--- a/ipynb/analyze.ipynb
+++ b/ipynb/analyze.ipynb
@@ -4,30 +4,41 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded: True\n"
+     ]
+    }
+   ],
    "source": [
-    "from python.kkvhash import kkv_hash"
+    "import sys\n",
+    "sys.path.insert(0, '..')\n",
+    "\n",
+    "from python.analyzer import Analyzer\n",
+    "from python.config import Mode\n",
+    "\n",
+    "analyzer = Analyzer(Mode.m1mln)\n",
+    "print(f\"Loaded: {analyzer.load()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "544728206"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "kkv_hash('test'.encode())"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
