random test - much clearer result to do something with that

--- a/ipynb/random.ipynb
+++ b/ipynb/random.ipynb
@@ -16,16 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from random import randint\n",
+    "import statistics as st\n",
     "\n",
     "len_min = 6\n",
     "len_max = 12\n",
     "\n",
-    "count = 1000000\n",
+    "number_of_tests = 1000000\n",
     "\n",
     "def get_rand() -> bytes:\n",
     "    return buffer[randint(0, 255)]\n",
@@ -34,36 +35,52 @@
     "    return [\n",
     "        kkv_hash(b''.join([get_rand() for _ in range(randint(len_min, len_max))]))\n",
     "        for i\n",
-    "        in range(count)\n",
+    "        in range(number_of_tests)\n",
     "    ]\n",
     "\n",
-    "def run_composite_test(n: int) -> None:\n",
+    "def run_composite_test(n: int) -> list:\n",
     "    assert 0 < n < 100\n",
-    "    results = [\n",
-    "        count - len(set(run_random()))\n",
+    "    return [\n",
+    "        number_of_tests - len(set(run_random()))\n",
     "        for i\n",
     "        in range(n)\n",
     "    ]\n",
-    "    print(results)\n",
-    "    print(f\"The worst one: {max(results)}\")"
+    "    \n",
+    "def print_results(data: list) -> None:\n",
+    "    if not (isinstance(data, list) and len(data)):\n",
+    "        return\n",
+    "    \n",
+    "    print(data)\n",
+    "    print(f\"The worst one: {max(results)}\")\n",
+    "    print(f\"Deviation: {st.stdev(results):.2f}\") # Use sample due to random values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = run_composite_test(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[454, 474, 483, 482, 462, 472, 473, 443, 502, 476]\n",
-      "The worst one: 502\n"
+      "[465, 500, 469, 441, 450, 458, 463, 439, 474, 481]\n",
+      "The worst one: 500\n",
+      "Deviation: 18.55\n"
      ]
     }
    ],
    "source": [
-    "run_composite_test(10)"
+    "print_results(results)"
    ]
   },
   {
