Key arrangement - run test, check few different configurations and print the best one

--- a/ipynb/key_arrangement.ipynb
+++ b/ipynb/key_arrangement.ipynb
@@ -40,6 +40,7 @@
     "\n",
     "from typing import (\n",
     "    List,\n",
+    "    Tuple,\n",
     ")\n",
     "\n",
     "\n",
@@ -47,32 +48,32 @@
     "    NO_RESULTS = \"Cannot calculate the results\"\n",
     "\n",
     "class KeyArrangement(object):\n",
-    "    \n",
+    "\n",
     "    MIN_PARTITIONS_COUNT = 2**1\n",
     "    MAX_PARTITIONS_COUNT = 2**6\n",
-    "    \n",
+    "\n",
     "    MIN_SLOTS_COUNT = 2**2\n",
     "    MAX_SLOTS_COUNT = 2**5\n",
-    "    \n",
+    "\n",
     "    def __init__(self, hashes: List[int]) -> None:\n",
     "        self._hashes = hashes\n",
     "        self._size = len(self._hashes)\n",
     "        self._partitions = KeyArrangement.MIN_PARTITIONS_COUNT\n",
     "        self._slots = KeyArrangement.MIN_SLOTS_COUNT\n",
-    "        \n",
+    "\n",
     "        self._results: List[int] = None\n",
-    "        \n",
+    "\n",
     "    def __len__(self) -> int:\n",
     "        return self._size\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def size(self) -> int:\n",
     "        return self._size\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def partitions(self) -> int:\n",
     "        return self._partitions\n",
-    "    \n",
+    "\n",
     "    @partitions.setter\n",
     "    def partitions(self, n: int) -> None:\n",
     "        if n > self.MAX_PARTITIONS_COUNT:\n",
@@ -81,11 +82,11 @@
     "            self._partitions = self.MIN_PARTITIONS_COUNT\n",
     "        else:\n",
     "            self._partitions = n\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def slots(self) -> int:\n",
     "        return self._slots\n",
-    "        \n",
+    "\n",
     "    @slots.setter\n",
     "    def slots(self, n: int) -> None:\n",
     "        if n > self.MAX_SLOTS_COUNT:\n",
@@ -94,40 +95,52 @@
     "            self._slots = self.MIN_SLOTS_COUNT\n",
     "        else:\n",
     "            self._slots = n\n",
-    "            \n",
+    "\n",
     "    def calc_results(self) -> None:\n",
     "        divisor = self.partitions * self.slots\n",
     "        \n",
     "        self._results = [0]*divisor\n",
     "        for hash in self._hashes:\n",
     "            self._results[hash % divisor] += 1\n",
-    "            \n",
+    "\n",
     "    def _valid_results(self) -> bool:\n",
     "        return self._results is not None and len(self._results)\n",
-    "            \n",
+    "\n",
     "    def get_avg(self) -> float:\n",
     "        if not self._valid_results():\n",
     "            return 0\n",
     "        return st.mean(self._results)\n",
-    "    \n",
+    "\n",
     "    def get_stdev(self) -> float:\n",
     "        if not self._valid_results():\n",
     "            return 0\n",
     "        return st.stdev(self._results)\n",
-    "    \n",
+    "\n",
     "    def get_pstdev(self) -> float:\n",
     "        if not self._valid_results():\n",
     "            return 0\n",
     "        return st.pstdev(self._results)\n",
+    "\n",
+    "    def get_details(self) -> Tuple[int, int, float]:\n",
+    "        self.calc_results()\n",
+    "\n",
+    "        if not self._valid_results():\n",
+    "            return (0, .0, .0)\n",
     "    \n",
-    "    def details(self) -> None:\n",
+    "        return (\n",
+    "            self.partitions,\n",
+    "            self.slots,\n",
+    "            self.get_pstdev() / self.get_avg(),\n",
+    "        )\n",
+    "    \n",
+    "    def print_details(self) -> None:\n",
     "        if not self._valid_results():\n",
     "            self.calc_results()\n",
-    "        \n",
+    "\n",
     "        if not self._valid_results():\n",
     "            print(Messages.NO_RESULTS)\n",
     "            return\n",
-    "            \n",
+    "\n",
     "        avg = self.get_avg()\n",
     "        stdev = self.get_pstdev()\n",
     "        cof = stdev / avg\n",
@@ -140,15 +153,15 @@
     "            f\"Coefficient of distribution: {cof:.4f}\",\n",
     "            sep='\\n',\n",
     "        )\n",
-    "    \n",
+    "\n",
     "    def show(self, details: bool = False) -> None:\n",
     "        self.calc_results()\n",
-    "        \n",
+    "\n",
     "        if not self._valid_results():\n",
     "            print(Messages.NO_RESULTS)\n",
-    "            \n",
+    "\n",
     "        if details:\n",
-    "            self.details()\n",
+    "            self.print_details()\n",
     "\n",
     "        plt.rcParams['figure.figsize'] = [16, (self.slots**0.3)*self.slots]\n",
     "        fig, ax = plt.subplots()\n",
@@ -187,6 +200,58 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The best config: (2, 4, 0.009825783225779)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "test_partitions_count = [\n",
+    "    i for\n",
+    "    i in\n",
+    "    range(\n",
+    "        KeyArrangement.MIN_PARTITIONS_COUNT,\n",
+    "        KeyArrangement.MAX_PARTITIONS_COUNT,\n",
+    "        8,\n",
+    "    )\n",
+    "]\n",
+    "\n",
+    "test_slots_count = [\n",
+    "    i for\n",
+    "    i in\n",
+    "    range(\n",
+    "        KeyArrangement.MIN_SLOTS_COUNT,\n",
+    "        KeyArrangement.MAX_SLOTS_COUNT,\n",
+    "        8,\n",
+    "    )\n",
+    "]\n",
+    "\n",
+    "test_cases = list(itertools.product(test_partitions_count, test_slots_count))\n",
+    "\n",
+    "arrangementKeyTest = KeyArrangement(hashes)\n",
+    "\n",
+    "\n",
+    "test_results = []\n",
+    "for config in test_cases:\n",
+    "    arrangementKeyTest.partitions, arrangementKeyTest.slots = config\n",
+    "    test_results.append(arrangementKeyTest.get_details())\n",
+    "    \n",
+    "best_one = min(test_results, key=lambda x: x[2])\n",
+    "\n",
+    "print(f\"The best config: {best_one}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -239,10 +304,9 @@
     }
    ],
    "source": [
-    "arrangementKeyTest = KeyArrangement(hashes)\n",
-    "\n",
     "arrangementKeyTest.partitions, arrangementKeyTest.slots = (4, 4)\n",
-    "arrangementKeyTest.details()\n",
+    "arrangementKeyTest.calc_results()\n",
+    "arrangementKeyTest.print_details()\n",
     "arrangementKeyTest.show()\n",
     "\n",
     "arrangementKeyTest.partitions, arrangementKeyTest.slots = (4, 8)\n",
